--- a/src/sass/tweet/thread.scss
+++ b/src/sass/tweet/thread.scss
@@ -19,6 +19,14 @@
     margin-top: -50px;
 }
 
+.main-tweet, summary {
+    padding: 20px auto;
+    margin: 20px auto;
+    text-align: center;
+    background-color: var(--bg_panel);
+    font-size: 18px;
+}
+
 .main-tweet .tweet-content {
     font-size: 18px;
 }
