--- a/src/sass/tweet/thread.scss
+++ b/src/sass/tweet/thread.scss
@@ -20,7 +20,7 @@
 }
 
 .main-tweet, summary {
-    padding: 20px auto;
+    padding: 20px 0;
     margin: 20px auto;
     text-align: center;
     background-color: var(--bg_panel);
